fix: fix swagger docs error type configure
